assets/styles/style.css
:root {
	--font-size-main: 0.906rem; /* 14.5px */
	--font-size-second: 0.688rem; /* 11px */

	--color-main: rgba(0, 0, 0, 0.8);
	--border-main: rgba(0, 0, 0, 0.6);
	--border-shorthand: 0.063rem solid rgba(0, 0, 0, 0.6);

	/* Button */
	--button-hover-backround: rgba(0, 0, 0, 0.8);
	--button-hover-color: rgba(255, 255, 255, 0.9);
	--font-size-button: 0.769rem; /* 12.3px */

	--unit-one: 0.438rem; /* 7px */
	--unit-two: 0.75rem; /* 12px */

	--tile-color: white;
	--tile-color-secondary: rgba(0, 0, 0, 0.7);
}

*, *::before, *::after {
	color: var(--color-main);
	box-sizing: border-box;
}

body { /* Left & right spacing is left & right from default body margin + 12px */
	height: 100vh;
	margin-top: 0;
	margin-bottom: 0;
	padding: var(--unit-two);
	font-size: var(--font-size-main);
}

main {
	display: flex;
	justify-content: center;
	align-items: center;
	height: calc(100% - 9vh);
	max-width: 670px;
	margin: 4.5vh auto;
	text-align: center;
}

#hangman {
	width: 100%;
}

/* Header / Top Part */

.__header {
	border: var(--border-shorthand);
	border-bottom: none;
	padding: var(--unit-one) var(--unit-two);
	cursor: default;

	position: relative;
}

._losing-letters > span {
	text-decoration: underline;
}

._help {
	display: flex;
	align-items: center;

	position: absolute;
	top: var(--unit-one);
	bottom: var(--unit-one);
	left: var(--unit-two);
}

.help-icon_ {
	width: 1.313rem;
	padding: 0.188rem;
	opacity: 0.8;
	cursor: pointer;
}

.help-amount_ {
	font-size: var(--font-size-second);
	opacity: 0.8;
}

/* Game / Keyboard / Middle Part */

.__game {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border: var(--border-shorthand);
	padding: var(--unit-one) var(--unit-two);

	position: relative;
}

._guess-word {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	margin: 30px 0 25px 0;
}

._guess-word span {
	border-bottom: var(--border-shorthand);
	margin: 3px 5px;
	padding: 2px 6px;
	cursor: default;
}

._key {
	display: grid;
	grid-template-columns: repeat(10, 1fr);
	margin-bottom: 25px;
}

._key span {
	border: var(--border-shorthand);
	margin: 2px;
	padding: 7px 12px;
	font-size: var(--font-size-button);
	cursor: pointer;
}

._key span:nth-child(38) {
	grid-column: span 2;
}

._win-lose {
	margin: var(--font-size-second) 0;
	font-size: var(--font-size-button);
	font-weight: bold;

	position: absolute;
	top: 0;
}

/* Play Again / Bottom Part */

.__play-again {
	display: flex;
}

._category {
	background: none;
	border: var(--border-shorthand);
	border-top: none;
	width: 60%;
	padding: var(--unit-one) var(--unit-two);
	font-size: var(--font-size-button);
	font-style: italic;
}

._category:focus {
	outline: none;
}

._category option {
	font-size: var(--font-size-second);
}

._play-again-button {
	background: none;
	border: var(--border-shorthand);
	border-top: none;
	border-left: none;
	width: 40%;
	padding: var(--unit-one) var(--unit-two);
	font-size: var(--font-size-button);
	cursor: pointer;
}

/* Notice / Link */

.__notice {
	margin-top: var(--unit-two);
	padding: 0 var(--unit-one);
	font-size: var(--font-size-second);
	word-wrap: break-word;
}

/* Extra */

.clicked_ {
	opacity: 0.7;
}

.clicked_:hover {
	background: none !important;
	color: var(--color-main) !important;
	opacity: 0.7 !important;
	cursor: default !important;
}

.clicked-wrong_ {
	color: #FD5E5E !important;
	opacity: 0.7;
}

.clicked-wrong_:hover {
	background: none !important;
	color: #FD5E5E !important;
	opacity: 0.7 !important;
	cursor: default !important;
}

.clicked-hint_ {
	color: #e1f601;
	opacity: 0.7;
}

.clicked-hint_:hover {
	background: none !important;
	color: #e1f601 !important;
	opacity: 0.7 !important;
	cursor: default !important;
}

/* Media Query */

@media (hover: hover) {
	.help-icon_ {
		opacity: 0.6;
	}

	.help-icon_:hover {
		opacity: 0.8;
	}

	._key span:hover,
	._play-again-button:hover {
		color: var(--button-hover-color);
		background: var(--button-hover-backround);
	}
}

/* Font Size */
@media (max-width: 30rem) { /* 480px */
	html {
		font-size: calc(1rem - 10%);
	}
}
/* -------- */

@media (max-width: 30rem) { /* 480px */
	._key {
		grid-template-columns: repeat(8, 1fr);
	}
}

@media (max-width: 380px) { /* 380px */
	._key {
		grid-template-columns: repeat(5, 1fr);
	}
}

@media (max-width: 250px) { /* 250px */
	._key {
		grid-template-columns: repeat(4, 1fr);
	}
}

